--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,11 +11,6 @@
   >
 
 
-  <!-- <app-product [product]="products[0]"></app-product>
-  <app-product [product]="products[1]"></app-product> -->
-
-
-
   <p *ngIf="loading" class="text-center text-lg ">Loading...</p>
 
   <div *ngIf="products$ | async as products">
@@ -24,5 +19,10 @@
     *ngFor="let product of products | filterProducts: term; let i = index"
     [product]="product"></app-product>
   </div>
+
+  <app-modal title="Create new Product">
+    <app-create-prodduct></app-create-prodduct>
+  </app-modal>
+
 </div>
 
