--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,18 +6,19 @@
   <input
     type="text"
     class="mb-2 border py-2 px-4 w-full"
-    placeholder="Filter products..."
+    placeholder="Filter products...."
     [(ngModel)]="term"
   >
 
 
-  <p *ngIf="loading" class="text-center text-lg ">Loading...</p>
+  <p *ngIf="loading" class="text-center text-lg">Loading...</p>
 
   <div *ngIf="products$ | async as products">
 
     <app-product
     *ngFor="let product of products | filterProducts: term; let i = index"
     [product]="product"></app-product>
+
   </div>
 
   <app-modal title="Create new Product">
