--- a/src/app/components/create-prodduct/create-prodduct.component.html
+++ b/src/app/components/create-prodduct/create-prodduct.component.html
@@ -1,4 +1,5 @@
-<form [formGroup]="form" (ngSubmit)="submit()">
+<form [formGroup]="form" (ngSubmit)="submit">
+
   <input
     type="text"
     class="border w-full py-2 px-4 mb-2"
@@ -8,5 +9,8 @@
 
     <button
     type="submit"
-    class="py-2 px-4 bg-blue-600 text-white">Create</button>
+    class="py-2 px-4 bg-blue-600 text-white"
+    >Create
+    </button>
+
 </form>
