--- a/src/app/components/create-prodduct/create-prodduct.component.html
+++ b/src/app/components/create-prodduct/create-prodduct.component.html
@@ -7,6 +7,10 @@
     formControlName="title"
     >
 
+    <p class="text-red-600 font-medium mb-2"
+       *ngIf="title.errors?.minlength && title.touched"
+    >Please fill title field width min lenght. Now {{title.value.length}}</p>
+
     <button
     type="submit"
     class="py-2 px-4 bg-blue-600 text-white"
