--- a/src/app/components/create-prodduct/create-prodduct.component.html
+++ b/src/app/components/create-prodduct/create-prodduct.component.html
@@ -1,10 +1,11 @@
-<form [formGroup]="form" (ngSubmit)="submit">
+<form [formGroup]="form" (ngSubmit)="submit()">
 
   <input
     type="text"
     class="border w-full py-2 px-4 mb-2"
     placeholder="Product name"
     formControlName="title"
+    appFocus
     >
 
     <p class="text-red-600 font-medium mb-2"
